Fix for flicker on zoomit switch plus configuration to always show zoomit controls

--- a/webtree/themes/main/css/collapse_files/responsive.css
+++ b/webtree/themes/main/css/collapse_files/responsive.css
@@ -135,8 +135,11 @@ p {
 	float:		left;
 }
 
-/* ----- end of horizontal centering utility ----- */
+/* ----- exhibition top page ----- */
 
+.tmp-img{
+	visibility: hidden;	
+}
 
 
 .theme-title{
